# FragGeneScanPlusPlus

./: .gitignore  Doxyfile  Doxyfile.in  Makefile  README.md  USAGE.md  fasta.c  fasta.h  hmm.h  hmm_lib.c  meson.build  run_hmm.c  run_hmm.h  translation_tables.h  util_lib.c  util_lib.h
